2.0.1/_sources/plugins/index.rst.txt
:orphan:

.. _plugins_in_redhat.satellite:

Redhat.Satellite
================

Collection version 2.0.1

.. toctree::
    :maxdepth: 1

Plugin Index
------------

These are the plugins in the redhat.satellite collection


Callback Plugins
~~~~~~~~~~~~~~~~

* :ref:`foreman <ansible_collections.redhat.satellite.foreman_callback>` -- Sends events to Foreman

Inventory Plugins
~~~~~~~~~~~~~~~~~

* :ref:`foreman <ansible_collections.redhat.satellite.foreman_inventory>` -- Foreman inventory source

Modules
~~~~~~~

* :ref:`activation_key <ansible_collections.redhat.satellite.activation_key_module>` -- Manage Activation Keys
* :ref:`architecture <ansible_collections.redhat.satellite.architecture_module>` -- Manage Architectures
* :ref:`auth_source_ldap <ansible_collections.redhat.satellite.auth_source_ldap_module>` -- Manage LDAP Authentication Sources
* :ref:`bookmark <ansible_collections.redhat.satellite.bookmark_module>` -- Manage Bookmarks
* :ref:`compute_attribute <ansible_collections.redhat.satellite.compute_attribute_module>` -- Manage Compute Attributes
* :ref:`compute_profile <ansible_collections.redhat.satellite.compute_profile_module>` -- Manage Compute Profiles
* :ref:`compute_resource <ansible_collections.redhat.satellite.compute_resource_module>` -- Manage Compute Resources
* :ref:`config_group <ansible_collections.redhat.satellite.config_group_module>` -- Manage (Puppet) Config Groups
* :ref:`content_credential <ansible_collections.redhat.satellite.content_credential_module>` -- Manage Content Credentials
* :ref:`content_upload <ansible_collections.redhat.satellite.content_upload_module>` -- Upload content to a repository
* :ref:`content_view <ansible_collections.redhat.satellite.content_view_module>` -- Manage Content Views
* :ref:`content_view_filter <ansible_collections.redhat.satellite.content_view_filter_module>` -- Manage Content View Filters
* :ref:`content_view_version <ansible_collections.redhat.satellite.content_view_version_module>` -- Manage Content View Versions
* :ref:`domain <ansible_collections.redhat.satellite.domain_module>` -- Manage Domains
* :ref:`external_usergroup <ansible_collections.redhat.satellite.external_usergroup_module>` -- Manage External User Groups
* :ref:`global_parameter <ansible_collections.redhat.satellite.global_parameter_module>` -- Manage Global Parameters
* :ref:`hardware_model <ansible_collections.redhat.satellite.hardware_model_module>` -- Manage Hardware Models
* :ref:`host <ansible_collections.redhat.satellite.host_module>` -- Manage Hosts
* :ref:`host_collection <ansible_collections.redhat.satellite.host_collection_module>` -- Manage Host Collections
* :ref:`host_info <ansible_collections.redhat.satellite.host_info_module>` -- Fetch information about Hosts
* :ref:`host_power <ansible_collections.redhat.satellite.host_power_module>` -- Manage Power State of Hosts
* :ref:`hostgroup <ansible_collections.redhat.satellite.hostgroup_module>` -- Manage Hostgroups
* :ref:`http_proxy <ansible_collections.redhat.satellite.http_proxy_module>` -- Manage HTTP Proxies
* :ref:`image <ansible_collections.redhat.satellite.image_module>` -- Manage Images
* :ref:`installation_medium <ansible_collections.redhat.satellite.installation_medium_module>` -- Manage Installation Media
* :ref:`job_invocation <ansible_collections.redhat.satellite.job_invocation_module>` -- Invoke Remote Execution Jobs
* :ref:`job_template <ansible_collections.redhat.satellite.job_template_module>` -- Manage Job Templates
* :ref:`lifecycle_environment <ansible_collections.redhat.satellite.lifecycle_environment_module>` -- Manage Lifecycle Environments
* :ref:`location <ansible_collections.redhat.satellite.location_module>` -- Manage Locations
* :ref:`operatingsystem <ansible_collections.redhat.satellite.operatingsystem_module>` -- Manage Operating Systems
* :ref:`organization <ansible_collections.redhat.satellite.organization_module>` -- Manage Organizations
* :ref:`os_default_template <ansible_collections.redhat.satellite.os_default_template_module>` -- Manage Default Template Associations To Operating Systems
* :ref:`partition_table <ansible_collections.redhat.satellite.partition_table_module>` -- Manage Partition Table Templates
* :ref:`product <ansible_collections.redhat.satellite.product_module>` -- Manage Products
* :ref:`provisioning_template <ansible_collections.redhat.satellite.provisioning_template_module>` -- Manage Provisioning Templates
* :ref:`puppet_environment <ansible_collections.redhat.satellite.puppet_environment_module>` -- Manage Puppet Environments
* :ref:`puppetclasses_import <ansible_collections.redhat.satellite.puppetclasses_import_module>` -- Import Puppet Classes from a Proxy
* :ref:`realm <ansible_collections.redhat.satellite.realm_module>` -- Manage Realms
* :ref:`redhat_manifest <ansible_collections.redhat.satellite.redhat_manifest_module>` -- Interact with a Red Hat Satellite Subscription Manifest
* :ref:`repository <ansible_collections.redhat.satellite.repository_module>` -- Manage Repositories
* :ref:`repository_info <ansible_collections.redhat.satellite.repository_info_module>` -- Fetch information about Repositories
* :ref:`repository_set <ansible_collections.redhat.satellite.repository_set_module>` -- Enable/disable Red Hat Repositories available through subscriptions
* :ref:`repository_sync <ansible_collections.redhat.satellite.repository_sync_module>` -- Sync a Repository or Product
* :ref:`resource_info <ansible_collections.redhat.satellite.resource_info_module>` -- Gather information about resources
* :ref:`role <ansible_collections.redhat.satellite.role_module>` -- Manage Roles
* :ref:`scap_content <ansible_collections.redhat.satellite.scap_content_module>` -- Manage SCAP content
* :ref:`scap_tailoring_file <ansible_collections.redhat.satellite.scap_tailoring_file_module>` -- Manage SCAP Tailoring Files
* :ref:`setting <ansible_collections.redhat.satellite.setting_module>` -- Manage Settings
* :ref:`smart_class_parameter <ansible_collections.redhat.satellite.smart_class_parameter_module>` -- Manage Smart Class Parameters
* :ref:`smart_proxy <ansible_collections.redhat.satellite.smart_proxy_module>` -- Manage Smart Proxies
* :ref:`status_info <ansible_collections.redhat.satellite.status_info_module>` -- Get status info
* :ref:`subnet <ansible_collections.redhat.satellite.subnet_module>` -- Manage Subnets
* :ref:`subscription_manifest <ansible_collections.redhat.satellite.subscription_manifest_module>` -- Manage Subscription Manifests
* :ref:`sync_plan <ansible_collections.redhat.satellite.sync_plan_module>` -- Manage Sync Plans
* :ref:`templates_import <ansible_collections.redhat.satellite.templates_import_module>` -- Sync Templates from a repository
* :ref:`user <ansible_collections.redhat.satellite.user_module>` -- Manage Users
* :ref:`usergroup <ansible_collections.redhat.satellite.usergroup_module>` -- Manage User Groups


.. seealso::

    List of :ref:`collections <list_of_collections>` with docs hosted here.